<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_page"
    android:id="@+id/drawerlayout"
    >

    <include layout="@layout/app_bar_main"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:visibility="visible"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Use relative Layout because A RelativeLayout is a very powerful
        utility for designing a user interface because it can eliminate nested view
        groups and keep your layout hierarchy flat, which improves performance -->

        <!-- Welcome message -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WELCOME"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginTop="130dp"
            android:layout_marginStart="78dp"/>

        <!-- Edittext to enter the Email-->
        <EditText
            android:id="@+id/Email"
            android:layout_width="181dp"
            android:layout_height="55dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="190dp"
            android:layout_marginEnd="100dp"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textAlignment="center" />

        <!-- Edittext to enter the Password-->
        <EditText
            android:id="@+id/password"
            android:layout_width="180dp"
            android:layout_height="59dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="245dp"
            android:layout_marginEnd="100dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <!-- Login Button -->
        <Button
            android:id="@+id/b1"
            android:layout_width="180dp"
            android:layout_height="77dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="117dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="138dp"
            android:text="@string/Login"
            android:textSize="14sp" />

        <!-- Checkbox for the Shared preference -->
        <CheckBox
            android:id="@+id/b2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="182dp"
            android:layout_marginBottom="244dp"
            android:text="@string/remember"
            android:textSize="13sp" />
        <!-- login Progress -->
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:id="@+id/navigationView"
        app:headerLayout="@layout/header"
        app:menu="@menu/main"
        />

</androidx.drawerlayout.widget.DrawerLayout>