<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="22pt"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/by"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintBottom_toTopOf="@+id/names" />

    <TextView
        android:id="@+id/names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/by" />

    <LinearLayout
        android:id="@+id/imageButtonsContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="112dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonsContainer1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/names">

        <ImageButton
            android:id="@+id/SunActivity"
            android:layout_width="155dp"
            android:layout_height="192dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/weather"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/buttonSeparator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/black"
            />

        <View
            android:id="@+id/buttonSeparator"
            android:layout_width="0dp"
            android:layout_height="8dp"
            app:layout_constraintBottom_toTopOf="@+id/imageButton2"
            app:layout_constraintTop_toBottomOf="@+id/imageButton" />

        <ImageButton
            android:id="@+id/recipe"
            android:layout_width="155dp"
            android:layout_height="192dp"
            android:layout_marginEnd="8dp"
            android:background="@color/black"
            android:scaleType="fitCenter"
            android:src="@drawable/cook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSeparator" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/imageButtonsContainer1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButtonsContainer"
        app:layout_constraintTop_toBottomOf="@+id/names">

        <ImageButton
            android:id="@+id/Deezer"
            android:layout_width="155dp"
            android:layout_height="192dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/deezer"
            android:scaleType="fitCenter"
            android:padding="1dp"
            android:background="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/buttonSeparator1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/buttonSeparator1"
            android:layout_width="0dp"
            android:layout_height="8dp"
            app:layout_constraintBottom_toTopOf="@+id/imageButton4"
            app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

        <ImageButton
            android:id="@+id/Dictionary"
            android:layout_width="155dp"
            android:scaleType="fitCenter"
            android:layout_height="192dp"
            android:layout_marginEnd="8dp"
            android:background="@color/black"
            android:src="@drawable/dictionary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSeparator1" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>